WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86537
[chromium] Chromium port never sets USE(CG) so code behind it is dead
https://bugs.webkit.org/show_bug.cgi?id=86537
Summary
[chromium] Chromium port never sets USE(CG) so code behind it is dead
James Robinson
Reported
2012-05-15 15:19:28 PDT
[chromium] Chromium port never sets USE(CG) so code behind it is dead
Attachments
Patch
(20.47 KB, patch)
2012-05-15 15:21 PDT
,
James Robinson
enne
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-05-15 15:21:09 PDT
Created
attachment 142077
[details]
Patch
Adrienne Walker
Comment 2
2012-05-15 15:33:12 PDT
Comment on
attachment 142077
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=142077&action=review
Nice. R=me.
> Source/WebCore/platform/chromium/ThemeChromiumMac.mm:37 > #include "PlatformContextSkia.h"
This isn't a style header sorting error?
James Robinson
Comment 3
2012-05-15 15:35:31 PDT
(In reply to
comment #2
)
> (From update of
attachment 142077
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=142077&action=review
> > Nice. R=me. > > > Source/WebCore/platform/chromium/ThemeChromiumMac.mm:37 > > #include "PlatformContextSkia.h" > > This isn't a style header sorting error?
It's the first #include in the file (the others are #import, which sorts alphabetically before #include)
James Robinson
Comment 4
2012-05-15 16:58:11 PDT
Committed
r117190
: <
http://trac.webkit.org/changeset/117190
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug