[chromium] Chromium port never sets USE(CG) so code behind it is dead https://bugs.webkit.org/show_bug.cgi?id=86537

Reviewed by Adrienne Walker.

Deletes code behind USE(CG) in chromium-specific code and removes unneeded USE(SKIA) guards.

Source/WebCore:

* platform/chromium/DragImageRef.h:
(WebCore):
* platform/chromium/MIMETypeRegistryChromium.cpp:
(WebCore::MIMETypeRegistry::isSupportedImageMIMETypeForEncoding):
* platform/chromium/ScrollbarThemeChromiumMac.mm:
(WebCore::ScrollbarThemeChromiumMac::paint):
* platform/chromium/ThemeChromiumMac.mm:
(WebCore::paintStepper):
* platform/graphics/chromium/PlatformImage.cpp:
(WebCore::PlatformImage::updateFromImage):

Source/WebKit/chromium:

* src/GraphicsContext3DChromium.cpp:
(WebCore::GraphicsContext3DPrivate::GraphicsContext3DPrivate):
(WebCore::GraphicsContext3DPrivate::~GraphicsContext3DPrivate):
(WebCore::GraphicsContext3DPrivate::grContext):
(WebCore::GraphicsContext3DPrivate::paintFramebufferToCanvas):
(WebCore::GraphicsContext3D::grContext):
* src/GraphicsContext3DPrivate.h:
(GraphicsContext3DPrivate):
* src/PlatformSupport.cpp:
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::doPixelReadbackToCanvas):

Tools:

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::paintRect):

Canonical link: https://commits.webkit.org/104127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117190 268f45cc-cd09-0410-ab3c-d52691b4dbfc