Source/WebCore/platform/chromium/MIMETypeRegistryChromium.cpp
@@ -104,7 +104,7 @@ bool MIMETypeRegistry::isSupportedImageMIMETypeForEncoding(const String& mimeTyp
 {
     if (mimeType == "image/jpeg" || mimeType == "image/png")
         return true;
-#if USE(WEBP) && USE(SKIA)
+#if USE(WEBP)
     if (mimeType == "image/webp")
         return true;
 #endif
