Source/WebCore/platform/graphics/chromium/PlatformImage.cpp
@@ -24,20 +24,10 @@
  */
 
 #include "config.h"
-
 #include "PlatformImage.h"
 
-#if USE(SKIA)
 #include "NativeImageSkia.h"
 #include "PlatformContextSkia.h"
-#elif USE(CG)
-#include <CoreGraphics/CGBitmapContext.h>
-#include <CoreGraphics/CGContext.h>
-#include <CoreGraphics/CGImage.h>
-#include <wtf/RetainPtr.h>
-#else
-#error "Need to implement for your platform"
-#endif
 
 namespace WebCore {
 
@@ -47,19 +37,12 @@ PlatformImage::PlatformImage()
 
 void PlatformImage::updateFromImage(NativeImagePtr nativeImage)
 {
-#if USE(SKIA)
     // The layer contains an Image.
     NativeImageSkia* skiaImage = static_cast<NativeImageSkia*>(nativeImage);
     ASSERT(skiaImage);
     const SkBitmap& skiaBitmap = skiaImage->bitmap();
 
     IntSize bitmapSize(skiaBitmap.width(), skiaBitmap.height());
-#elif USE(CG)
-    // NativeImagePtr is a CGImageRef on Mac OS X.
-    int width = CGImageGetWidth(nativeImage);
-    int height = CGImageGetHeight(nativeImage);
-    IntSize bitmapSize(width, height);
-#endif
 
     size_t bufferSize = bitmapSize.width() * bitmapSize.height() * 4;
     if (m_size != bitmapSize) {
@@ -68,44 +51,10 @@ void PlatformImage::updateFromImage(NativeImagePtr nativeImage)
         m_size = bitmapSize;
     }
 
-#if USE(SKIA)
     SkAutoLockPixels lock(skiaBitmap);
     // FIXME: do we need to support more image configurations?
     ASSERT(skiaBitmap.config()== SkBitmap::kARGB_8888_Config);
     skiaBitmap.copyPixelsTo(m_pixelData.get(), bufferSize);
-#elif USE(CG)
-    // FIXME: we should get rid of this temporary copy where possible.
-    int tempRowBytes = width * 4;
-    // Note we do not zero this vector since we are going to
-    // completely overwrite its contents with the image below.
-    // Try to reuse the color space from the image to preserve its colors.
-    // Some images use a color space (such as indexed) unsupported by the bitmap context.
-    RetainPtr<CGColorSpaceRef> colorSpaceReleaser;
-    CGColorSpaceRef colorSpace = CGImageGetColorSpace(nativeImage);
-    CGColorSpaceModel colorSpaceModel = CGColorSpaceGetModel(colorSpace);
-    switch (colorSpaceModel) {
-    case kCGColorSpaceModelMonochrome:
-    case kCGColorSpaceModelRGB:
-    case kCGColorSpaceModelCMYK:
-    case kCGColorSpaceModelLab:
-    case kCGColorSpaceModelDeviceN:
-        break;
-    default:
-        colorSpaceReleaser.adoptCF(CGColorSpaceCreateDeviceRGB());
-        colorSpace = colorSpaceReleaser.get();
-        break;
-    }
-    RetainPtr<CGContextRef> tempContext(AdoptCF, CGBitmapContextCreate(m_pixelData.get(),
-                                                                       width, height, 8, tempRowBytes,
-                                                                       colorSpace,
-                                                                       kCGImageAlphaPremultipliedFirst | kCGBitmapByteOrder32Host));
-    CGContextSetBlendMode(tempContext.get(), kCGBlendModeCopy);
-    CGContextDrawImage(tempContext.get(),
-                       CGRectMake(0, 0, static_cast<CGFloat>(width), static_cast<CGFloat>(height)),
-                       nativeImage);
-#else
-#error "Need to implement for your platform."
-#endif
 }
 
 } // namespace WebCore
