Source/WebKit/chromium/src/GraphicsContext3DChromium.cpp
@@ -40,6 +40,8 @@
 #include "ChromeClientImpl.h"
 #include "DrawingBuffer.h"
 #include "Extensions3DChromium.h"
+#include "GrContext.h"
+#include "GrGLInterface.h"
 #include "GraphicsContext3DPrivate.h"
 #include "HTMLCanvasElement.h"
 #include "HTMLImageElement.h"
@@ -52,17 +54,6 @@
 #include <wtf/FastMalloc.h>
 #include <wtf/text/CString.h>
 
-#if USE(CG)
-#include "GraphicsContext.h"
-#include "WebGLRenderingContext.h"
-#include <CoreGraphics/CGContext.h>
-#include <CoreGraphics/CGImage.h>
-#endif
-
-#if USE(SKIA)
-#include "GrContext.h"
-#include "GrGLInterface.h"
-#endif
 
 namespace {
 
@@ -97,24 +88,16 @@ GraphicsContext3DPrivate::GraphicsContext3DPrivate(PassOwnPtr<WebKit::WebGraphic
     , m_layerComposited(false)
     , m_preserveDrawingBuffer(preserveDrawingBuffer)
     , m_resourceSafety(ResourceSafetyUnknown)
-#if USE(SKIA)
     , m_grContext(0)
-#elif USE(CG)
-    , m_renderOutputSize(0)
-#else
-#error Must port to your platform
-#endif
 {
 }
 
 GraphicsContext3DPrivate::~GraphicsContext3DPrivate()
 {
-#if USE(SKIA)
     if (m_grContext) {
         m_grContext->contextDestroyed();
         GrSafeUnref(m_grContext);
     }
-#endif
 }
 
 PassRefPtr<GraphicsContext3D> GraphicsContext3DPrivate::createGraphicsContextFromWebContext(PassOwnPtr<WebKit::WebGraphicsContext3D> webContext, GraphicsContext3D::RenderStyle renderStyle, bool preserveDrawingBuffer)
@@ -163,7 +146,6 @@ Platform3DObject GraphicsContext3DPrivate::platformTexture() const
     return m_impl->getPlatformTextureId();
 }
 
-#if USE(SKIA)
 class GrMemoryAllocationChangedCallback : public Extensions3DChromium::GpuMemoryAllocationChangedCallbackCHROMIUM {
 public:
     GrMemoryAllocationChangedCallback(GraphicsContext3DPrivate* context)
@@ -202,7 +184,6 @@ GrContext* GraphicsContext3DPrivate::grContext()
     }
     return m_grContext;
 }
-#endif
 
 void GraphicsContext3DPrivate::prepareTexture()
 {
@@ -228,7 +209,7 @@ void GraphicsContext3DPrivate::paintFramebufferToCanvas(int framebuffer, int wid
 {
     unsigned char* pixels = 0;
     size_t bufferSize = 4 * width * height;
-#if USE(SKIA)
+
     const SkBitmap* canvasBitmap = imageBuffer->context()->platformContext()->bitmap();
     const SkBitmap* readbackBitmap = 0;
     ASSERT(canvasBitmap->config() == SkBitmap::kARGB_8888_Config);
@@ -254,16 +235,6 @@ void GraphicsContext3DPrivate::paintFramebufferToCanvas(int framebuffer, int wid
     // Read back the frame buffer.
     SkAutoLockPixels bitmapLock(*readbackBitmap);
     pixels = static_cast<unsigned char*>(readbackBitmap->getPixels());
-#elif USE(CG)
-    if (!m_renderOutput || m_renderOutputSize != bufferSize) {
-        m_renderOutput = adoptArrayPtr(new unsigned char[bufferSize]);
-        m_renderOutputSize = bufferSize;
-    }
-
-    pixels = m_renderOutput.get();
-#else
-#error Must port to your platform
-#endif
 
     m_impl->readBackFramebuffer(pixels, 4 * width * height, framebuffer, width, height);
 
@@ -275,7 +246,6 @@ void GraphicsContext3DPrivate::paintFramebufferToCanvas(int framebuffer, int wid
         }
     }
 
-#if USE(SKIA)
     readbackBitmap->notifyPixelsChanged();
     if (m_resizingBitmap.readyToDraw()) {
         // We need to draw the resizing bitmap into the canvas's backing store.
@@ -284,11 +254,6 @@ void GraphicsContext3DPrivate::paintFramebufferToCanvas(int framebuffer, int wid
         dst.set(SkIntToScalar(0), SkIntToScalar(0), SkIntToScalar(canvasBitmap->width()), SkIntToScalar(canvasBitmap->height()));
         canvas.drawBitmapRect(m_resizingBitmap, 0, dst);
     }
-#elif USE(CG)
-    GraphicsContext3D::paintToCanvas(pixels, width, height, imageBuffer->width(), imageBuffer->height(), imageBuffer->context()->platformContext());
-#else
-#error Must port to your platform
-#endif
 }
 
 void GraphicsContext3DPrivate::paintRenderingResultsToCanvas(CanvasRenderingContext* context, DrawingBuffer* drawingBuffer)
@@ -1057,12 +1022,10 @@ Platform3DObject GraphicsContext3D::platformTexture() const
     return m_private->platformTexture();
 }
 
-#if USE(SKIA)
 GrContext* GraphicsContext3D::grContext()
 {
     return m_private->grContext();
 }
-#endif
 
 void GraphicsContext3D::prepareTexture()
 {
